--- a/common/common.scss
+++ b/common/common.scss
@@ -5,7 +5,7 @@
 }
 
 .embedded-posts.bottom {
-    background-color: #01924529;
+    background-color: #f7931e;
 }
 
 nav.post-controls .show-replies {
@@ -22,7 +22,7 @@ html.dark nav.post-controls .show-replies:hover {
 }
 
 nav.post-controls button.create {
-    background-color: #019245;
+    background-color: #f7931e;
     color: #fff;
 }
 
@@ -259,7 +259,7 @@ html.whos-online-flair .latest-topic-list .latest-topic-list-item.last-poster-on
 
 .category-boxes-with-topics .category-box-heading a[href]:hover,
 html.dark .category-boxes-with-topics h3:hover {
-	color: #019245;
+	color: #f7931e;
 }
 
 .floatl {
@@ -324,7 +324,7 @@ html.dark .category-boxes-with-topics h3:hover {
 }
 
 .header-navListSub--connect:hover {
-	background-color: #019245;
+	background-color: #f7931e;
 }
 
 .topic-list-main-link a.title, .topic-list .main-link a.title {
@@ -380,11 +380,11 @@ nav.post-controls button.has-like {
 }
 
 .timeline-container .topic-timeline .timeline-handle {
-	background-color: #019245;
+	background-color: #f7931e;
 }
 
 .timeline-container .topic-timeline .timeline-scrollarea {
-	border-color: #019245;
+	border-color: #f7931e;
 }
 
 .header nav {
@@ -444,7 +444,7 @@ nav .nav-wrapper {
 
 .side-nav .collapsible-body > ul:not(.collapsible) > li.active,
 .side-nav.fixed .collapsible-body > ul:not(.collapsible) > li.active {
-	background-color: #019245; }
+	background-color: #f7931e; }
 .side-nav .collapsible-body > ul:not(.collapsible) > li.active a,
 .side-nav.fixed .collapsible-body > ul:not(.collapsible) > li.active a {
 	color: #111923; }
@@ -463,7 +463,7 @@ nav .nav-wrapper {
 	will-change: opacity; }
 
 .header-line {
-	background-color: #019245;
+	background-color: #f7931e;
 	border: none;
 	margin: 0;
 	position: fixed;
@@ -485,9 +485,9 @@ nav .nav-wrapper {
 .header-nav--dynamic {
 	height: 69px; }
 .header-nav--active {
-	background-color: #019245;
-	background: -webkit-linear-gradient(top, rgba(255, 0, 0, 0), #019245);
-	background: linear-gradient(to bottom, rgba(255, 0, 0, 0), #019245);
+	background-color: #f7931e;
+	background: -webkit-linear-gradient(top, rgba(255, 0, 0, 0), #f7931e);
+	background: linear-gradient(to bottom, rgba(255, 0, 0, 0), #f7931e);
 	color: #fff !important; }
 .header-navWrapper {
 	display: inline-block; }
@@ -514,9 +514,9 @@ nav .nav-wrapper {
 	height: 69px;
 	line-height: 69px; }
 .header-navListItem:hover {
-	background-color: #019245;
-	background: -webkit-linear-gradient(top, rgba(255, 0, 0, 0), #019245);
-	background: linear-gradient(to bottom, rgba(255, 0, 0, 0), #019245);
+	background-color: #f7931e;
+	background: -webkit-linear-gradient(top, rgba(255, 0, 0, 0), #f7931e);
+	background: linear-gradient(to bottom, rgba(255, 0, 0, 0), #f7931e);
 	color: #fff; }
 .header-navListItem:hover:not(.header-navListItem) {
 	background: none;
@@ -581,9 +581,9 @@ nav .nav-wrapper {
 	.header-nav--dynamic {
 		height: 59px; }
 	.header-nav--activeMobile {
-		background-color: #019245;
-		background: -webkit-linear-gradient(left, rgba(255, 0, 0, 0), #019245);
-		background: linear-gradient(to right, rgba(255, 0, 0, 0), #019245);
+		background-color: #f7931e;
+		background: -webkit-linear-gradient(left, rgba(255, 0, 0, 0), #f7931e);
+		background: linear-gradient(to right, rgba(255, 0, 0, 0), #f7931e);
 		color: #fff; }
 	.header-navLogo {
 		height: 70px; }
@@ -600,9 +600,9 @@ nav .nav-wrapper {
 	.header-navListItemLink {
 		padding: 0 5px; }
 	.header-navListItem--mobile:hover {
-		background-color: #019245;
-		background: -webkit-linear-gradient(left, rgba(255, 0, 0, 0), #019245);
-		background: linear-gradient(to right, rgba(255, 0, 0, 0), #019245);
+		background-color: #f7931e;
+		background: -webkit-linear-gradient(left, rgba(255, 0, 0, 0), #f7931e);
+		background: linear-gradient(to right, rgba(255, 0, 0, 0), #f7931e);
 		color: #fff; }
 	.header-navListItemConnectRing {
 		left: 67px;
@@ -679,7 +679,7 @@ nav .nav-wrapper {
 	width: auto; }
 
 .ctm h2 {
-	color: #019245 !important; }
+	color: #f7931e !important; }
 
 .select-wrapper + label {
 	top: -18px; }
@@ -731,7 +731,7 @@ nav .nav-wrapper {
 	text-align: center; }
 
 .commands-title {
-	color: #019245;
+	color: #f7931e;
 	font-weight: bold; }
 
 @media only screen and (max-width: 720px) {
@@ -770,9 +770,9 @@ nav .nav-wrapper {
 .ecc-label.active {
 	color: #fff; }
 .ecc-calc {
-	background: #019245;
-	border: 3px solid #019245;
-	box-shadow: 0 0 0 #019245, 0 5px 0 #004621, 0 5px 0 #004621;
+	background: #f7931e;
+	border: 3px solid #f7931e;
+	box-shadow: 0 0 0 #f7931e, 0 5px 0 #004621, 0 5px 0 #004621;
 	color: #fff;
 	cursor: pointer;
 	font-size: 18px;
@@ -794,18 +794,18 @@ nav .nav-wrapper {
 	color: #fff;
 	animation: none;
 	-webkit-animation: none;
-	box-shadow: 0 1px 0 #019245, 0 2px 0 #004621, 0 2px 2px #004621;
+	box-shadow: 0 1px 0 #f7931e, 0 2px 0 #004621, 0 2px 2px #004621;
 	-ms-transform: translateY(3px);
 	transform: translateY(3px);
 	-webkit-transform: translateY(3px); }
 .ecc-calc:focus {
-	background: #019245; }
+	background: #f7931e; }
 .ecc-result {
 	padding: 20px 0 !important; }
 .ecc-resultNumber {
 	color: #fbfbfb; }
 .ecc-resultNumber--class {
-	color: #019245; }
+	color: #f7931e; }
 .ecc-info {
 	color: #d0901d;
 	font-size: 24px;
@@ -863,9 +863,9 @@ nav .nav-wrapper {
 	cursor: pointer !important; }
 
 .discord-join {
-	background: #019245 !important;
-	border: 3px solid #019245 !important;
-	box-shadow: 0 0 0 #019245, 0 5px 0 #004621, 0 5px 0 #004621;
+	background: #f7931e !important;
+	border: 3px solid #f7931e !important;
+	box-shadow: 0 0 0 #f7931e, 0 5px 0 #004621, 0 5px 0 #004621;
 	color: #fff;
 	cursor: pointer;
 	display: block;
@@ -888,7 +888,7 @@ nav .nav-wrapper {
 .discord-join:active {
 	animation: none;
 	-webkit-animation: none;
-	box-shadow: 0 1px 0 #019245, 0 2px 0 #004621, 0 2px 2px #004621;
+	box-shadow: 0 1px 0 #f7931e, 0 2px 0 #004621, 0 2px 2px #004621;
 	-ms-transform: translateY(3px);
 	transform: translateY(3px);
 	-webkit-transform: translateY(3px); }
@@ -945,7 +945,7 @@ nav .nav-wrapper {
 	width: 100px;
 	z-index: 1000; }
 .donation-cartButton {
-	color: #019245;
+	color: #f7931e;
 	font-size: 30px;
 	position: absolute;
 	right: 64px;
@@ -980,9 +980,9 @@ nav .nav-wrapper {
 .donation-modalFooter {
 	margin-bottom: 15px; }
 .donation-modalFooterAccept {
-	background: #019245;
-	border: 3px solid #019245;
-	box-shadow: 0 0 0 #019245, 0 5px 0 #004621, 0 5px 0 #004621;
+	background: #f7931e;
+	border: 3px solid #f7931e;
+	box-shadow: 0 0 0 #f7931e, 0 5px 0 #004621, 0 5px 0 #004621;
 	color: #fff;
 	cursor: pointer;
 	display: block;
@@ -1005,20 +1005,20 @@ nav .nav-wrapper {
 .donation-modalFooterAccept:active {
 	animation: none;
 	-webkit-animation: none;
-	box-shadow: 0 1px 0 #019245, 0 2px 0 #004621, 0 2px 2px #004621;
+	box-shadow: 0 1px 0 #f7931e, 0 2px 0 #004621, 0 2px 2px #004621;
 	-ms-transform: translateY(3px);
 	transform: translateY(3px);
 	-webkit-transform: translateY(3px); }
 .donation-modalFooterAccept:focus {
-	background: #019245; }
+	background: #f7931e; }
 
 .donation-calc {
 	margin-bottom: 30px; }
 
 .donation-infoButton {
-	background: #019245;
-	border: 3px solid #019245;
-	box-shadow: 0 0 0 #019245, 0 5px 0 #004621, 0 5px 0 #004621;
+	background: #f7931e;
+	border: 3px solid #f7931e;
+	box-shadow: 0 0 0 #f7931e, 0 5px 0 #004621, 0 5px 0 #004621;
 	color: #fff;
 	cursor: pointer;
 	display: block;
@@ -1041,12 +1041,12 @@ nav .nav-wrapper {
 .donation-infoButton:active {
 	animation: none;
 	-webkit-animation: none;
-	box-shadow: 0 1px 0 #019245, 0 2px 0 #004621, 0 2px 2px #004621;
+	box-shadow: 0 1px 0 #f7931e, 0 2px 0 #004621, 0 2px 2px #004621;
 	-ms-transform: translateY(3px);
 	transform: translateY(3px);
 	-webkit-transform: translateY(3px); }
 .donation-infoButton:focus {
-	background: #019245; }
+	background: #f7931e; }
 
 .donation-image {
 	width: 100%; }
@@ -1055,7 +1055,7 @@ nav .nav-wrapper {
 	max-width: 70%; }
 
 .donation-contentText a {
-	color: #019245;
+	color: #f7931e;
 	text-decoration: underline; }
 
 .donation-price {
@@ -1088,7 +1088,7 @@ nav .nav-wrapper {
 	display: none; }
 
 .donation-input:focus:not([readonly]) {
-	border-bottom: 1px solid #019245 !important; }
+	border-bottom: 1px solid #f7931e !important; }
 
 .donation-inputError {
 	border-bottom: 3px solid #d41313 !important; }
@@ -1151,7 +1151,7 @@ nav .nav-wrapper {
 	text-align: center; }
 
 .minicart-price {
-	color: #019245;
+	color: #f7931e;
 	font-weight: bold; }
 
 .minicart-subtotal {
@@ -1225,17 +1225,17 @@ nav .nav-wrapper {
 	overflow: visible !important; }
 
 ::-moz-selection {
-	background: #019245;
+	background: #f7931e;
 	color: #fff;
 	text-shadow: 0 0 0 #fff; }
 
 ::selection {
-	background: #019245;
+	background: #f7931e;
 	color: #fff;
 	text-shadow: 0 0 0 #fff; }
 
 ::-moz-selection {
-	background: #019245;
+	background: #f7931e;
 	color: #fff;
 	text-shadow: 0 0 0 #fff; }
 
@@ -1377,7 +1377,7 @@ nav ul a,
 
 .header-nav--active {
 	background: none;
-	background-color: #019245;
+	background-color: #f7931e;
 	color: #fff; }
 
 .header-navListItem a:hover,
@@ -1387,14 +1387,14 @@ nav ul a,
 .header-navListItem:hover,
 .header-navListItem--mobile:hover {
 	background: none;
-	background-color: #019245;
+	background-color: #f7931e;
 	color: #fff; }
 
 .sidebar-toggler--right {
 	color: #d0901d; }
 
 .sidebar-toggler--left {
-	color: #019245; }
+	color: #f7931e; }
 
 
 .sidebar-toggler--right,
@@ -1434,7 +1434,7 @@ nav ul a,
 .donation-info:active,
 .donation-infoButton:active,
 .ecc-calc:active {
-	background-color: #019245;
+	background-color: #f7931e;
 	color: #fbfbfb; }
 
 
@@ -1451,7 +1451,7 @@ nav ul a,
 .footer-navListItem {
 	border-bottom: 1px solid #fbfbfb; }
 .footer-navListItem:hover {
-	border-bottom: 1px solid #019245; }
+	border-bottom: 1px solid #f7931e; }
 
 .discord-userlist::-webkit-scrollbar,
 .discord-userlist::-webkit-scrollbar-track {
@@ -1484,11 +1484,11 @@ color: #777;
 
 .badge-wrapper.bar span.badge-category:hover,
 html.dark .badge-wrapper.bar span.badge-category:hover {
-    color: #019245;
+    color: #f7931e;
 }
 
 #green {
-	color: #019245 !important;
+	color: #f7931e !important;
 }
 
 ol.category-breadcrumb {
@@ -1502,14 +1502,14 @@ ol.category-breadcrumb {
 
 .badge-notification.new-posts,
 .badge-notification.unread-posts {
-	background-color: #019245;
+	background-color: #f7931e;
 }
 .d-header .icons .unread-notifications {
 	background-color: #d0901d;
 }
 
 .badge-notification.new-topic {
-	color: #019245;
+	color: #f7931e;
 }
 
 .latest-topic-list-item .main-link a.title.visited:not(.badge-notification) {
@@ -1528,7 +1528,7 @@ ol.category-breadcrumb {
 
 .header-nav--active {
 	background: none;
-	background-color: #019245;
+	background-color: #f7931e;
 	font-weight: bold;
 	color: #fff;
 }
@@ -1975,11 +1975,11 @@ Nav List
 .table-of-contents a:hover {
 	color: #a8a8a8;
 	padding-left: 19px;
-	border-left: 1px solid #019245; }
+	border-left: 1px solid #f7931e; }
 .table-of-contents a.active {
 	font-weight: 500;
 	padding-left: 18px;
-	border-left: 2px solid #019245; }
+	border-left: 2px solid #f7931e; }
 
 .side-nav.right-aligned {
 	right: 0;
@@ -2016,7 +2016,7 @@ Nav List
 .side-nav li > a.btn:hover, .side-nav li > a.btn-large:hover, .side-nav li > a.btn-large:hover {
 	background-color: #01ab51; }
 .side-nav li > a.btn-floating:hover {
-	background-color: #019245; }
+	background-color: #f7931e; }
 .side-nav li > a > i,
 .side-nav li > a > [class^="mdi-"], .side-nav li > a li > a > [class*="mdi-"],
 .side-nav li > a > i.material-icons {
@@ -2110,7 +2110,7 @@ Nav List
 }
 
 html.dark .discourse-local-date.cooked {
-	color: #019245;
+	color: #f7931e;
 }
 
 .latest-topic-list-item:hover {
@@ -2439,14 +2439,14 @@ html.dark a.hashtag,
 html.dark .title-wrapper .topic-statuses .d-icon,
 html.dark .user-stream .notification p span:first-child,
 html.dark .discourse-local-date.cooked-date .d-icon {
-	color: #019245;
+	color: #f7931e;
 }
 
 html.dark .header-nav--active,
 html.dark .header-navListItem:hover {
-	background: #019245;
-	background: -webkit-linear-gradient(top, rgba(255, 0, 0, 0), #019245);
-	background: linear-gradient(to bottom, rgba(255, 0, 0, 0), #019245);
+	background: #f7931e;
+	background: -webkit-linear-gradient(top, rgba(255, 0, 0, 0), #f7931e);
+	background: linear-gradient(to bottom, rgba(255, 0, 0, 0), #f7931e);
 	color: #fff;
 }
 
@@ -2481,7 +2481,7 @@ html.dark .donation-modalFooterAccept:active,
 html.dark .donation-info:active,
 html.dark .donation-infoButton:active,
 html.dark .ecc-calc:active {
-	background-color: #019245;
+	background-color: #f7931e;
 	color: #fbfbfb;
 }
 
@@ -2537,7 +2537,7 @@ html.dark .selected-posts .btn,
 html.dark .topic-post.selected article.boxed .select-posts button.select-post,
 html.dark .post-notice,
 html.dark .topic-body .solved-container .btn {
-	background-color: #019245;
+	background-color: #f7931e;
 }
 
 html.dark .moderator .cooked,
